# CR3_OpenCV_Controls

./: .gitignore  =8.0.0  PHASE4_COMPLETE.md  README.md
Archive/legacy_cr3_controls/: IMPLEMENTATION_STATUS.md  README.md  cr3_simple_controller.py  project_index.md
Config/: hand_tracking_config.yaml  robot_params.yaml
Documentation/: 10_phase_implementation_plan.md  PHASE3_COMPLETION_REPORT.md  README.md  final_analysis_summary.md  hybrid_python_ros_architecture.md  lessons_learned.md  ros2_jazzy_implementation.md  tcp_4axis_vs_ros_6axis_comparison.md
Documentation/Explanations/: # Code Citations  Current_System_Explained.md  README.md  ROS2_Visualization_Guide.md
Documentation/History/: 06-04-2025.md  06-05-2025.md  06-06-2025.md  06-07-2025.md
Documentation/Phases/: phase_01_tcp_connection.md  phase_02_ros2_infrastructure.md  phase_03_safety_coordinates.md  phase_04_hand_tracking.md  phase_04_pose_recognition.md  phase_05_advanced_control.md  phase_06_communication_bridge.md  phase_07_integration.md  phase_08_optimization.md  phase_09_ui_visualization.md  phase_10_documentation_deployment.md
Documentation/References/: 10_Phase_Implementation_Plan.md  1_System_Implementation_Guide.md  2_Project_Completion_Reports.md  3_File_Organization_Guidelines_Enhanced.md  4_System_Architecture_Summary.md  5_Startup_Usage_Reference.md  Current_Project_Status.md  Developer_Quick_Reference.md  FUNCTIONAL_REORGANIZATION_REPORT.md  PHASE4_COMPLETION_REPORT.md  Phase4_Pose_Recognition_Implementation.md  README.md
Robot_Controls/: README.md
Testing/: README.md
cr3_ws/src/cr3_hand_control/: CMakeLists.txt  package.xml  setup.py
cr3_ws/src/cr3_hand_control/config/: robot_params.yaml
cr3_ws/src/cr3_hand_control/launch/: cr3_infrastructure.launch.py  parameter_management.launch.py
cr3_ws/src/cr3_hand_control/msg/: BasicCommand.msg  HandPosition.msg  RobotStatus.msg  SafetyStatus.msg
cr3_ws/src/cr3_hand_control/scripts/: diagnostics_monitor.py  parameter_manager.py
cr3_ws/src/cr3_hand_control/src/: basic_robot_controller.cpp
cr3_ws/src/cr3_hand_control/srv/: EmergencyStop.srv  SetParameters.srv
ros2_package/: CMakeLists.txt  complete_demo.py  monitor_pose_system.py  package.xml  quick_start_pose_recognition.sh  run_integration_test.sh  setup.py  start_cr3_system.sh  test_camera_demo.py
ros2_package/config/: calibration_params.yaml  robot_params.yaml  safety_params_ros2.yaml
ros2_package/config/coordination/: calibration_params.yaml  frame_management.yaml  transform_config.yaml
ros2_package/config/perception/: camera_config.yaml  hand_tracking_config.yaml  pose_recognition_params.yaml
ros2_package/config/robot/: cr3_parameters.yaml  motion_config.yaml
ros2_package/config/safety/: emergency_protocols.yaml  safety_params.yaml  workspace_boundaries.yaml
ros2_package/launch/: coordinate_system.launch.py  phase3_complete.launch.py  safety_system.launch.py  test_nodes.launch.py
ros2_package/launch/subsystems/: coordinate_system.launch.py  perception_system.launch.py  pose_recognition.launch.py  robot_control_system.launch.py  safety_system.launch.py
ros2_package/launch/systems/: complete_system.launch.py
ros2_package/launch/testing/: pose_recognition_test.launch.py
ros2_package/msg/: CoordinateTransform.msg  DebugInfo.msg  PoseCoordinates.msg  PoseTrackingStatus.msg  SafetyAlert.msg  SafetyStatus.msg
ros2_package/msg/perception/: HandPosition.msg
ros2_package/msg/robot/: BasicCommand.msg  RobotStatus.msg
ros2_package/scripts/: install_pose_dependencies.sh  test_pose_recognition.py  test_ros2_integration.py  transform_manager.py
ros2_package/scripts/coordination/: calibration_node.py
ros2_package/scripts/robot_control/: diagnostics_monitor.py  parameter_manager.py
ros2_package/scripts/safety/: safety_monitor.py
ros2_package/src/: __init__.py  basic_robot_controller.cpp  workspace_validator.cpp
ros2_package/src/coordination/: coordinate_broadcaster.cpp
ros2_package/src/cr3_hand_control/: __init__.py  pose_recognition_node.py
ros2_package/src/safety/: emergency_stop_handler.cpp
ros2_package/srv/: EmergencyStop.srv
ros2_package/srv/robot/: SetParameters.srv
ros2_package/test/: test_coordinates.py  test_essential_messages.py  test_phase3_integration.py  test_phase3_messages.py  test_safety_boundaries.py
ros2_package/test/integration/: test_phase3_integration.py
