<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cr3_hand_control</name>
  <version>1.0.0</version>
  <description>CR3 Hand Tracking Control System - Advanced robotic arm control with real-time hand tracking</description>
  <maintainer email="andrewlloydholland@gmail.com">Andrew Lloyd Holland</maintainer>
  <license>MIT</license>
  
  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <!-- Core ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>diagnostic_msgs</depend>
  <depend>rcl_interfaces</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  
  <!-- Message generation -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <!-- Computer Vision dependencies -->
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-mediapipe</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  
  <!-- Visualization dependencies -->
  <exec_depend>rviz2</exec_depend>
  <exec_depend>rqt_image_view</exec_depend>
  
  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
